@startuml
'https://plantuml.com/sequence-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}

abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
    + getType():boolean
 }
 class HeroAircraft {
     - shootNum:int
     - power:int
     - direction:int
     + HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
     + getHeroAircraft():HeroAircraft
     + forward():void
     + shoot():List<BaseBullet>
 }

AbstractFlyingObject <|--AbstractAircraft
 AbstractAircraft <|-- HeroAircraft
@enduml